--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div>
        <nav id="PConly" class="navbar navbar-expand-lg mt-3" style="background-image:linear-gradient(-30deg,rgb(79,172,206) 0%,#f4f4f4 50%, #F0F8FF 100%)">
 
-        <button  class="navbar-toggler navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-expanded="true">
+        <button  class="navbar-toggler navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarMenu" >
           <span  class="navbar-toggler-icon">
           	<div id="TOGGLEICON"></div>
 			<div id="TOGGLEICON"></div>
@@ -69,7 +69,7 @@
         <div class="navbar-collapse justify-content-center collapse show" id="navbarMenu" style="color: black;">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">&nbsp;&nbsp;About</a>
               <div class="dropdown-menu" style="background: rgba(13,87,137,0.9);font-size: 22px;">
                 <a class="dropdown-item" href="#About">About College</a>
                 <a class="dropdown-item" href="#Ranking">Ranking</a>
@@ -78,18 +78,18 @@
                 <a class="dropdown-item" href="#FS">Fee Structure</a>
               </div>
             </li>
-            <li class="nav-item"><a href="#C.O." class="nav-link">Cutoffs</a></li>
+            <li class="nav-item"><a href="#C.O." class="nav-link">&nbsp;&nbsp;Cutoffs</a></li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Placements</a>
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">&nbsp;&nbsp;Placements</a>
               <div class="dropdown-menu" style="background: rgba(13,87,137,0.9);font-size: 22px;">
               
-                <a class="dropdown-item" href="#RP">Recent Placements</a>
-                <a class="dropdown-item" href="#OR">Past Recruiters</a>
+                <a class="dropdown-item" href="#RP">&nbsp;&nbsp;Recent Placements</a>
+                <a class="dropdown-item" href="#OR">&nbsp;&nbsp;Past Recruiters</a>
               </div>
             </li>
-            <li class="nav-item"><a href="#CM" class="nav-link">Corona & Melange</a></li>
+            <li class="nav-item"><a href="#CM" class="nav-link">&nbsp;&nbsp;Tech fest</a></li>
 
-            <li class="nav-item"><a href="#CU" class="nav-link">Contact Us</a></li>
+            <li class="nav-item"><a href="#CU" class="nav-link">&nbsp;&nbsp;Contact Us</a></li>
           </ul>
         </div>
       </nav>
