--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">&nbsp;&nbsp;About</a>
-              <div class="dropdown-menu" style="background: rgba(13,87,137,0.9);font-size: 22px;">
+              <div class="dropdown-menu" style="background: rgba(13,87,137,0.9);">
                 <a class="dropdown-item" href="#About">About College</a>
                 <a class="dropdown-item" href="#Ranking">Ranking</a>
                 <a class="dropdown-item" href="#MOA">Mode Of Admission</a>
