--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li class="nav-item"><a href="#C.O." class="nav-link">&nbsp;&nbsp;Cutoffs</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">&nbsp;&nbsp;Placements</a>
-              <div class="dropdown-menu" style="background: rgba(13,87,137,0.9);font-size: 22px;">
+              <div class="dropdown-menu" style="background: rgba(13,87,137,0.9);">
               
                 <a class="dropdown-item" href="#RP">&nbsp;&nbsp;Recent Placements</a>
                 <a class="dropdown-item" href="#OR">&nbsp;&nbsp;Past Recruiters</a>
