--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="col-sm-2 col-md-5"></div>
     </div>
   <div>
-       <nav id="PConly" class="navbar navbar-expand-lg mt-3" style="background-image:linear-gradient(-30deg,rgb(79,172,206) 0%,#f4f4f4 50%, #F0F8FF 100%)">
+        <nav id="PConly" class="navbar navbar-expand-lg mt-3" style="background-image:linear-gradient(-30deg,rgb(79,172,206) 0%,#f4f4f4 50%, #F0F8FF 100%)">
 
         <button  class="navbar-toggler navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarMenu" >
           <span  class="navbar-toggler-icon">
@@ -95,7 +95,7 @@
       </nav>
   </div>
   </header>
-  <main">
+  <main>
 <div>
 <div class="row" style="margin-left: 10%;margin-right: 10%;width: 100%;">
   <div class="col-md-6 col-6 jumbotron" style="background-color: white;">
@@ -4867,8 +4867,8 @@ Communication Systems<br>
         </a>
       </li>
     </ul>
-  <p id="copyright">©. Designed by <a class="link" href="http://www.connectingfreshers.com/">Connecting Freshers</a></p>
-  <p id="copyrightPIC" style="font-weight: bold;">Photo Credit: NIT Patna</p>   
+  <p id="copyright" style="text-align: center;">©. Designed by <a class="link" href="http://www.connectingfreshers.com/">Connecting Freshers</a></p>
+  <p id="copyrightPIC" style="font-weight: bold;text-align: center;">Photo Credit: NIT Patna</p>   
   </div>
   </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
