--- a/index.html
+++ b/index.html
@@ -4833,7 +4833,7 @@ Communication Systems<br>
                   </div>
                   <div class="col-md-2 col-2 mt-1"></div>
                   <div class="col-md-3 col-5 card mt-1">
-                    <img class="card-img-top rounded-circle" src="images\Anjali.jpg" style="width: 60%;margin-top: 10px;">
+                    <img id="BottomImage" class="card-img-top rounded-circle" src="images\Anjali.jpg" style="width: 60%;margin-top: 10px;">
                     <div class="card-body">
                 <p class="card-text" id="cardpara" style="text-align: left;color: black;"><span id="cardheader" style="font-weight: bold;">Anjali Vyas</span><br>Graphic designer</p>
               </div>
